--- a/TaskrApp/app/src/main/res/layout/drawer_list_item.xml
+++ b/TaskrApp/app/src/main/res/layout/drawer_list_item.xml
@@ -24,6 +24,6 @@
     android:gravity="center_vertical"
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
-    android:textColor="#111"
+    android:textColor="@color/colorPrimaryDark"
     android:background="?android:attr/activatedBackgroundIndicator"
     android:minHeight="?android:attr/listPreferredItemHeightSmall"/>
