--- a/TaskrApp/app/src/main/res/layout/fragment_task_details.xml
+++ b/TaskrApp/app/src/main/res/layout/fragment_task_details.xml
@@ -4,9 +4,9 @@
     android:layout_height="match_parent"
     tools:context=".fragment.TaskDetailsFragment">
 
-    <include
-        android:id="@+id/app_bar"
-        layout="@layout/app_bar" />
+    <!--<include-->
+        <!--android:id="@+id/app_bar"-->
+        <!--layout="@layout/app_bar" />-->
 
     <LinearLayout
         android:layout_width="match_parent"
