--- a/TaskrApp/app/src/main/res/layout/activity_login.xml
+++ b/TaskrApp/app/src/main/res/layout/activity_login.xml
@@ -71,8 +71,9 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="60dp"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"/>
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:padding="10dp"/>
 
     <LinearLayout
         android:id="@+id/sign_out_and_disconnect"
